build(debian): separate Qt5/Qt6 build configurations for V25/V20 support
Log: as title

--- a/debian/control.1
+++ b/debian/control.1
@@ -6,12 +6,11 @@ Build-Depends:
  debhelper(>= 11),
  cmake,
  pkg-config,
- qt6-5compat-dev,
- qt6-base-dev,
- qt6-tools-dev,
- qt6-tools-dev-tools,
- qt6-base-private-dev,
- libdtk6widget-dev,
+ qtbase5-dev,
+ qttools5-dev,
+ qttools5-dev-tools,
+ qtbase5-private-dev,
+ libdtkwidget-dev,
  lxqt-build-tools(>= 0.6.0~),
  libutf8proc-dev,
  libglib2.0-dev,
